[project]
name = "football-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.1.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "nuitka>=2.7.12",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "shapely>=2.1.1",
]
